# ChangeLog for sys-apps/man
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/man/ChangeLog,v 1.113 2007/04/04 19:19:54 ferdy Exp $

  04 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> man-1.6e-r1.ebuild:
  Stable on alpha as per bug #172761

  04 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> man-1.6e-r1.ebuild:
  Stable on sparc wrt #172761

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org> man-1.6e-r1.ebuild:
  Stable on ppc. See bug #172761.

  31 Mar 2007; Jeroen Roovers <jer@gentoo.org> man-1.6e-r1.ebuild:
  Stable for HPPA (bug #172761).

  31 Mar 2007; Christian Faulhammer <opfer@gentoo.org> man-1.6e-r1.ebuild:
  stable x86, bug 172761

*man-1.6e-r3 (27 Jan 2007)

  27 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +files/man-1.6e-readonly-whatis.patch,
  +files/man-1.6e-readonly-whatis2.patch, +man-1.6e-r3.ebuild:
  Dont update whatis on read-only filesystems #163932 by Doug Goldstein.

*man-1.6e-r2 (12 Jan 2007)

  12 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +files/man-1.6e-man2html-bzip2.patch, +man-1.6e-r2.ebuild:
  Add support for bzip2 pages to man2html.

*man-1.6e-r1 (06 Jan 2007)

  06 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +files/man-1.6e-dont-kill-shebangs.patch, +files/man-1.6e-headers.patch,
  files/makewhatis.cron, +man-1.6e-r1.ebuild:
  Fix path in makewhatis #160317 by Paul Taylor, make sure #!shebangs arent
  destroyed to handle lame root shells #159192 by Gautam Iyer, and include
  some more headers.

  27 Dec 2006; Mike Frysinger <vapier@gentoo.org> man-1.6e.ebuild:
  Move makewhatis to /etc/cron.daily.

*man-1.6e (29 Nov 2006)

  29 Nov 2006; Mike Frysinger <vapier@gentoo.org> +man-1.6e.ebuild:
  Version bump.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> man-1.6d.ebuild:
  Added ~sparc-fbsd keyword.

  22 Aug 2006; Stephen P. Becker <geoman@gentoo.org> man-1.6d.ebuild:
  stable on mips
